# NukeUsdPlugins

./: .clang-format  CMakeLists.txt  CatchTestMain.cpp  License.txt  README.md
Plugin/: CMakeLists.txt  usdReader.cpp  usdReader.h  usdReaderFormat.cpp  usdReaderFormat.h
UsdConverter/: CMakeLists.txt
UsdConverter/include/UsdConverter/: UsdAttrConverter.h  UsdAxisScenePlugin.h  UsdCameraScenePlugin.h  UsdCommon.h  UsdConverterApi.h  UsdGeoConverter.h  UsdLightScenePlugin.h  UsdSceneGraphPlugin.h  UsdSceneReader.h  UsdTypes.h  UsdUI.h
UsdConverter/src/: UsdAttrConverter.cpp  UsdAxisScenePlugin.cpp  UsdCameraScenePlugin.cpp  UsdCommon.cpp  UsdGeoConverter.cpp  UsdLightScenePlugin.cpp  UsdSceneGraphPlugin.cpp  UsdSceneReader.cpp  UsdUI.cpp
UsdConverter/unit_tests/: CMakeLists.txt  TestFixtures.cpp  TestFixtures.h  UsdAttrConverterTest.cpp  UsdGeoConverterTest.cpp
